fix user profile z-index

--- a/src/components/user-profile/user-profile.scss
+++ b/src/components/user-profile/user-profile.scss
@@ -7,6 +7,7 @@
 }
 
 .user-profile-container {
+  z-index: 1;
 	position: fixed;
 	left: 0px;
 	right: 0px;
